--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,10 @@
+.card {
+    width: 300px;
+}
+
 .card-faces {
     position: relative;
-    width: 300px;
+    width: inherit;
     height: 400px;
 }
 
@@ -22,6 +26,7 @@
 
 .card-power, .card-name {
     text-shadow: 0.15rem 0.15rem 0.1rem black;
+    color: #f2f2d7;
 }
 
 .card-power {
@@ -35,4 +40,28 @@
 
 .back-face {
     background-image: url(./back.png);
+    color: #f2f2d7;
+}
+
+/*####################################### BUTTON STYLES #######################################*/
+
+.card-buttons {
+    display: flex;
+    justify-content: space-around;
+}
+
+.card-buttons > * {
+    flex: 1;
+    padding: 0.4rem;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    transition: all 0.5s;
+    font-size: 1.1rem;
+    color: #f2f2d7;
+}
+
+.card-buttons > *:hover {
+    background-color: #f2f2d7;
+    color: #0c0805;
 }
