--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,5 +1,5 @@
 .cards {
-    background-image: url(./homeBackground.jpg);
+    background-image: url(../../images/wooden-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
