Move billboard to world page and style faction and factions a bit

--- a/src/components/Faction/Faction.css
+++ b/src/components/Faction/Faction.css
@@ -5,6 +5,7 @@
     background-size: cover;
     background-position: center;
     padding: 1rem;
+    border-radius: 1rem;
     cursor: pointer;
 }
 
