--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -86,20 +86,27 @@
     margin-bottom: -0px;
     font-size: 2.7rem;
   }
- 
-.btn {
-    background: linear-gradient(144deg, #1a120b, #311913 50%, #1a120b);
-    color: #fff;
+  .btn {
+    font-family: POE;
+    font-size: 1.5rem;
+    width: 100%;
+    background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
+    margin-top: 2rem;
+    color: rgb(255, 255, 255);
     padding: 16px !important;
+    border-radius:  30px;
+    border: none;
+    cursor: pointer;
+    /* transition: all 0.4s ease; */
   }
   
-.btn:hover {
+/* .btn:hover {
     background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
     color: rgb(255, 255, 255);
     padding: 16px !important;
     cursor: pointer;
     transition: all 0.4s ease;
-}
+} */
   
 .login #username {
     animation: bounce 1.1s;
