--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -81,18 +81,20 @@
   }
   */
   .btn {
-    background: linear-gradient(144deg, #1a120b, #311913 50%, #1a120b);
-    color: #fff;
-    padding: 16px !important;
-    transition: all 0.4s ease;
-  }
-  
-  .btn:hover {
+    font-family: POE;
+    font-size: 1.5rem;
+    width: 100%;
     background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
+    margin-top: 2rem;
     color: rgb(255, 255, 255);
     padding: 16px !important;
+    border-radius:  30px;
+    border: none;
     cursor: pointer;
+    /* transition: all 0.4s ease; */
   }
+  
+ 
   .login #username{
     animation: bounce 1.1s;
     background-color: #211f1d;
