--- a/src/pages/UserUpdate/UserUpdate.css
+++ b/src/pages/UserUpdate/UserUpdate.css
@@ -1,6 +1,6 @@
 .user{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 .corner{
@@ -75,22 +75,31 @@
   }
 
 .btnDel {
+  font-family: POE;
+  font-size: 1.5rem;
+  width: 100%;
     background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
     color: rgb(255, 255, 255);
     padding: 16px !important;
+    border-radius:  30px;
+    border: none;
     cursor: pointer;
-    transition: all 0.4s ease;
+    /* transition: all 0.4s ease; */
 }
+
   .btnDel:hover {
     background: linear-gradient(144deg, #1a120b , 20%,#311913e1 50%,#1a120b );
   }
   
 .btnSave{
-  background: linear-gradient(144deg, #1a120b , 20%,rgba(18, 28, 18, 0.666) 50%,#1a120b );
+  background: linear-gradient(144deg, #1a120b , 20%,rgba(16, 35, 16, 0.651) 50%,#1a120b );
   color: rgb(255, 255, 255);
   padding: 16px !important;
   cursor: pointer;
-  transition: all 0.4s ease;
+  border-radius: 30px;
+  border:none;
+  width: 50%;
+  /* transition: all 0.4s ease; */
 }
 .btnSave:hover{
   background: linear-gradient(144deg, #1a120b , 20%,rgba(18, 28, 18, 0.829) 50%,#1a120b );
@@ -186,9 +195,52 @@
     background-color: #211f1d;
   }
   
+  .cardDet {
+    
+    background: #110c07a6;
+    padding: 1rem;
+    border-radius: 6px;
+    
 
+  }
+  .userHeader{
+    font-size: 2rem;
+    text-align: center;
+
+  }
+  .card-image {
+    background-color: rgb(236, 236, 236);
+    width: 100%;
+    height: 130px;
+    border-radius: 6px 6px 0 0;
+
+  }
   
-  @media only screen and (max-width: 600px) {
+  .card-image:hover {
+    transform: scale(0.98);
+  }
+
+
+  .heading {
+    font-weight: 600;
+    color: rgb(88, 87, 87);
+    padding: 7px;
+  }
+  
+  .heading:hover {
+    cursor: pointer;
+  }
+  
+  
+  .name {
+    font-weight: 600;
+  }
+  
+  .name:hover {
+    cursor: pointer;
+  }
+  
+  /* @media only screen and (max-width: 600px) {
     .login {
       width: 70%;
       padding: 3em;
@@ -222,4 +274,4 @@
       transform: translateY(-20px);
       opacity: 0;
     }
-  }
+  } */
