fix: login and register pages style

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,154 +1,127 @@
 
 .corner{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  
 }
-.topStyle{
-    animation: bounce 0.9s;
-    width: 10rem;
-    height: 10rem;
-    margin: 30px 50px -60px 50px;
+.corner .topStyle{
+  animation: bounce 0.9s;
+  width: 10rem;
+  height: 10rem;
+  margin: 10px 60px 0px 60px;
 }
-.bottomStyle{
-    animation: bounce 1.5s;
-    width: 10rem;
-    height: 10rem;
-    margin: -55px 50px 30px 50px;
+.corner .bottomStyle{
+  animation: bounce 1.5s;
+  width: 10rem;
+  height: 10rem;
+  margin: 0px 60px 10px 60px;
 }
 .main{
-    display: flex;
-    justify-content: center;
-    /* border: 2px solid red; */
-    
+  display: flex;
+  justify-content: center;
+  /* border: 2px solid red; */
+  
 }
 .login {
 
-    color: #fff;
-    border-radius: 17px;
-    font-size: 1.3em;
-    /* border: 2px solid green; */
-  }
-.login h1{
-    animation: bounce 1s;
-    font-family:POE;
+  color: #fff;
+  border-radius: 17px;
+  font-size: 1.3em;
+  /* border: 2px solid green; */
 }
-  .login #username,
-  .login #email,
-  .login #password1,
-  .login #password2 {
-    opacity: 1;
-    display: block;
-    border: none;
-    outline: none;
-    width: 100%;
-    padding: 13px 18px;
-    margin: 20px 0 0 0;
-    font-size: 0.8em;
-    border-radius: 100px;
-    background: #3c3c3c;
-    color: #e5e5cb;
-    font-family:HLS;
-  }
-  
-  .login input:focus {
-    animation: bounce 1s;
-    /* -webkit-appearance: none; */
-  }
-  
-  /* .login .btn,
-  .login input[type=button],
-  .h1 {
-    border: 0;
-    outline: 0;
-    width: 100%;
-    padding: 13px;
-    margin: 40px 0 0 0;
-    border-radius: 500px;
-    animation: bounce2 1.6s;
-    font-size: 1.5rem;
-    font-family:POE;
-  } */
-  
-  /* .h1 {
-    padding: 0;
-    position: relative;
-    top: -35px;
-    display: block;
-    margin-bottom: -0px;
-    font-size: 2.7rem;
-  }
-  */
-  .btn {
-    font-family: POE;
-    font-size: 1.5rem;
-    width: 100%;
-    background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
-    margin-top: 2rem;
-    color: rgb(255, 255, 255);
-    padding: 16px !important;
-    border-radius:  30px;
-    border: none;
-    cursor: pointer;
-    /* transition: all 0.4s ease; */
-  }
-  
- 
-  .login #username{
-    animation: bounce 1.1s;
-    background-color: #211f1d;
-    /* -webkit-appearance: none; */
-  }
-  .login #email{
-    animation: bounce 1.2s;
-    background-color: #211f1d;
-    /* -webkit-appearance: none; */
-  }
-  
-  .login #password1{
-    animation: bounce1 1.3s;
-    background-color: #211f1d;
-  }
-  .login #password2{
-    animation: bounce1 1.4s;
-    background-color: #211f1d;
-  }
-  
+.login h1{
+  animation: bounce 1s;
+  font-family:POE;
+}
+.login #username,
+.login #email,
+.login #password1,
+.login #password2 {
+  opacity: 1;
+  display: block;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 13px 18px;
+  margin: 20px 0 0 0;
+  font-size: 0.8em;
+  border-radius: 100px;
+  background: #3c3c3c;
+  color: #e5e5cb;
+  font-family:HLS;
+}
 
-  
-  @media only screen and (max-width: 600px) {
-    .login {
-      width: 70%;
-      padding: 3em;
-    }
+.login input:focus {
+  animation: bounce 1s;
+  /* -webkit-appearance: none; */
+}
+
+.btn {
+  font-family: POE;
+  font-size: 1.5rem;
+  width: 100%;
+  background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
+  margin-top: 2rem;
+  color: rgb(255, 255, 255);
+  padding: 16px !important;
+  border-radius:  30px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+
+.login #username{
+  animation: bounce 1.1s;
+  background-color: #211f1d;
+}
+.login #email{
+  animation: bounce 1.2s;
+  background-color: #211f1d;
+}
+
+.login #password1{
+  animation: bounce1 1.3s;
+  background-color: #211f1d;
+}
+.login #password2{
+  animation: bounce1 1.4s;
+  background-color: #211f1d;
+}
+
+@media only screen and (max-width: 600px) {
+  .login {
+    width: 70%;
+    padding: 3em;
   }
-  
-  @keyframes bounce {
-    0% {
-      transform: translateY(-250px);
-      opacity: 0;
-    }
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-250px);
+    opacity: 0;
   }
-  
-  @keyframes bounce1 {
-    0% {
-      opacity: 0;
-    }
-  
-    40% {
-      transform: translateY(-100px);
-      opacity: 0;
-    }
+}
+
+@keyframes bounce1 {
+  0% {
+    opacity: 0;
   }
-  
-  @keyframes bounce2 {
-    0% {
-      opacity: 0;
-    }
-  
-    70% {
-      transform: translateY(-20px);
-      opacity: 0;
-    }
+
+  40% {
+    transform: translateY(-100px);
+    opacity: 0;
   }
+}
+
+@keyframes bounce2 {
+  0% {
+    opacity: 0;
+  }
+
+  70% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+}
