--- a/src/pages/UserUpdate/UserUpdate.css
+++ b/src/pages/UserUpdate/UserUpdate.css
@@ -9,7 +9,8 @@
 .user {
   display: flex;
   align-items: center;
-  justify-content: center; /* Added for horizontal centering */
+  justify-content: center;
+  /* Added for horizontal centering */
   /* Add other styles as needed */
 }
 
@@ -24,209 +25,252 @@
   align-items: center;
   /* Add other styles as needed */
 }
-.user{
+
+.user {
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   align-items: center;
 }
-.corner{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+
+.corner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.topStyle{
-    animation: bounce 0.9s;
-    width: 10rem;
-    height: 10rem;
-    margin: 10px 30px -30px 30px;
+.topStyle {
+  animation: bounce 0.9s;
+  width: 10rem;
+  height: 10rem;
+  margin: 10px 30px -30px 30px;
 }
 
-.bottomStyle{
-    animation: bounce 1.5s;
-    width: 10rem;
-    height: 10rem;
-    margin: 10px 10px 30px 10px;
+.bottomStyle {
+  animation: bounce 1.5s;
+  width: 10rem;
+  height: 10rem;
+  margin: 10px 10px 30px 10px;
 }
 
-.main{
-    display: flex;
-    justify-content: center;
+.main {
+  display: flex;
+  justify-content: center;
 }
 
 .login {
-    color: #fff;
-    border-radius: 17px;
-    font-size: 1.5em;
+  color: #fff;
+  border-radius: 17px;
+  font-size: 1.5em;
 }
 
-.login h1{
-    animation: bounce 1s;
-    font-family:POE;
-    text-align: center;
+.login h1 {
+  animation: bounce 1s;
+  font-family: POE;
+  text-align: center;
 }
-.section{
+
+.section {
   display: flex;
   flex-wrap: wrap;
 }
-.section1{
+
+.section1 {
   margin: 0.5rem;
 }
-.section2{
+
+.section2 {
   margin: 0.5rem;
 }
+
 .login #username,
 .login #firstname,
 .login #lastname,
 .login #email,
-.login #file,
 .login #currentPassword,
 .login #newPassword,
 .login #newPassword2 {
-    opacity: 1;
-    display: block;
-    border: none;
-    outline: none;
-    width: 100%;
-    padding: 13px 18px;
-    margin: 20px 0 0 0;
-    font-size: 1.3rem;
-    border-radius: 100px;
-    background: #3c3c3c;
-    color: #e5e5cb;
-    font-family:HLS;
+  opacity: 1;
+  display: block;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 13px 18px;
+  margin: 20px 0 0 0;
+  font-size: 1.3rem;
+  border-radius: 100px;
+  background: #3c3c3c;
+  color: #e5e5cb;
+  font-family: HLS;
 }
-  
+
 .login input:focus {
-    animation: bounce 1s;
-  }
+  animation: bounce 1s;
+}
 
 .btnDel {
   font-family: POE;
   font-size: 1.5rem;
   width: 100%;
-    background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
-    color: rgb(255, 255, 255);
-    padding: 16px !important;
-    border-radius:  30px;
-    margin-top: 1rem;
-    border: none;
-    cursor: pointer;
-    /* transition: all 0.4s ease; */
+  background: linear-gradient(144deg, #1a120b, 20%, #311913d0 50%, #1a120b);
+  color: rgb(255, 255, 255);
+  padding: 16px !important;
+  border-radius: 30px;
+  margin-top: 1rem;
+  border: none;
+  cursor: pointer;
+  /* transition: all 0.4s ease; */
 }
 
-  .btnDel:hover {
-    background: linear-gradient(144deg, #1a120b , 20%,#3119138e 50%,#1a120b );
-  }
-  
-.btnSave{
+.btnDel:hover {
+  background: linear-gradient(144deg, #1a120b, 20%, #3119138e 50%, #1a120b);
+}
+
+.btnSave {
   font-family: POE;
   font-size: 1.5rem;
-  background: linear-gradient(144deg, #1a120b , 20%,rgba(16, 35, 16, 0.651) 50%,#1a120b );
+  background: linear-gradient(144deg, #1a120b, 20%, rgba(16, 35, 16, 0.651) 50%, #1a120b);
   color: rgb(255, 255, 255);
   padding: 16px !important;
   margin-top: 1rem;
   cursor: pointer;
   border-radius: 30px;
-  border:none;
+  border: none;
   width: 50%;
   position: relative;
-    top: 50%;
-    left: 25%;
+  top: 50%;
+  left: 25%;
   /* transition: all 0.4s ease; */
 }
-.btnSave:hover{
-  background: linear-gradient(144deg, #1a120b , 20%,rgba(18, 28, 18, 0.829) 50%,#1a120b );
-    
+
+.btnSave:hover {
+  background: linear-gradient(144deg, #1a120b, 20%, rgba(18, 28, 18, 0.829) 50%, #1a120b);
+
 }
-  .login #username{
-    animation: bounce 0.7s;
-    background-color: #211f1d;
- 
-  }
-  .login #firstname{
-    animation: bounce 0.8s;
-    background-color: #211f1d;
- 
-  }
-  .login #lastname{
-    animation: bounce 0.9s;
-    background-color: #211f1d;
- 
-  }
 
-  .login #email{
-    animation: bounce 1s;
-    background-color: #211f1d;
-  }
-  .login #file{
-    animation: bounce 0.8s;
-    background-color: #211f1d;
-    
-  }
+.login #username {
+  animation: bounce 0.7s;
+  background-color: #211f1d;
 
+}
 
-  .login #currentPassword{
-    animation: bounce1 0.8s;
-    background-color: #211f1d;
-  }
-  .login #newPassword{
-    animation: bounce1 0.9s;
-    background-color: #211f1d;
-  }
-  .login #newPassword2{
-    animation: bounce1 1s;
-    background-color: #211f1d;
-  }
-  
-  .cardDet {
-    
-    margin-left: 40px;
-    padding: 1.5rem;
-    border-radius: 10px;
-    background-color: #211f1d54;
-    
+.login #firstname {
+  animation: bounce 0.8s;
+  background-color: #211f1d;
 
-  }
-  .userHeader{
-    font-size: 3rem;
-    text-align: center;
+}
 
-  }
-  .card-image {
-    background-color: rgb(236, 236, 236);
-    width: 100%;
-    height: 13rem;
-    border-radius: 6px;
+.login #lastname {
+  animation: bounce 0.9s;
+  background-color: #211f1d;
 
-  }
-  
-  .card-image:hover {
-    transform: scale(0.98);
-  }
+}
+
+.login #email {
+  animation: bounce 1s;
+  background-color: #211f1d;
+}
+
+input[type="file"] {
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+/* Style the custom file input button */
+.custom-file-input {
+  opacity: 1;
+  display: block;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 13px 18px;
+  margin: 20px 0 0 0;
+  font-size: 1.3rem;
+  border-radius: 100px;
+  background: #211f1d;
+  color: #737474;
+  font-family: HLS;
+  transition: background-color 0.3s, color 0.3s;
+  animation: bounce 0.7s;
+}
+.custom-file-input.file-selected {
+  background: linear-gradient(144deg, #1a120b, 20%, rgba(16, 35, 16, 0.651) 50%, #1a120b); /* Değiştirmek istediğiniz yeni arka plan rengi */
+  color: #e5e5cb;/* Değiştirmek istediğiniz yeni yazı rengi */
+}
+
+/* Optional: Style the label for file input */
+.file-label {
+  margin-top: 10px;
+  font-size: 0.9em;
+  color: #3c3c3c;
+}
 
 
-  .heading {
-    font-weight: 600;
-    color: rgb(88, 87, 87);
-    padding: 10px;
-    margin-left: 1rem;
-  }
-  
-  .heading:hover {
-    cursor: pointer;
-  }
-  
-  
-  .name {
-    font-weight: 600;
-  }
-  
-  .name:hover {
-    cursor: pointer;
-  }
-  
-  /* @media only screen and (max-width: 600px) {
+.login #currentPassword {
+  animation: bounce1 0.8s;
+  background-color: #211f1d;
+}
+
+.login #newPassword {
+  animation: bounce1 0.9s;
+  background-color: #211f1d;
+}
+
+.login #newPassword2 {
+  animation: bounce1 1s;
+  background-color: #211f1d;
+}
+
+.cardDet {
+
+  margin-left: 40px;
+  padding: 1.5rem;
+  border-radius: 10px;
+  background-color: #211f1d54;
+
+
+}
+
+.userHeader {
+  font-size: 3rem;
+  text-align: center;
+
+}
+
+.card-image {
+  background-color: rgb(236, 236, 236);
+  width: 100%;
+  height: 13rem;
+  border-radius: 6px;
+
+}
+
+.card-image:hover {
+  transform: scale(0.98);
+}
+
+
+.heading {
+  font-weight: 600;
+  color: rgb(88, 87, 87);
+  padding: 10px;
+  margin-left: 1rem;
+}
+
+.heading:hover {
+  cursor: pointer;
+}
+
+
+.name {
+  font-weight: 600;
+}
+
+.name:hover {
+  cursor: pointer;
+}
+
+/* @media only screen and (max-width: 600px) {
     .login {
       width: 70%;
       padding: 3em;
