feat: add delete user alert

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,33 +1,52 @@
+.login-alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  position: fixed;
+  top: 75px;
+  width: 300px;
+  margin-left: 42.1875%;
+  border-radius: 15px 15px 15px 15px;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
 
 
-
-
-
-.corner{
+.corner {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-top: 2rem;
-
-
-  
 }
 
-.corner .topStyle{
+.corner .topStyle {
   width: 10rem;
   height: 10rem;
   margin: 30px 30px 30px 30px;
   animation: bounce 0.9s;
 }
 
-.corner .bottomStyle{
+.corner .bottomStyle {
   animation: bounce1 1.4s;
   width: 10rem;
   height: 10rem;
   margin: 30px 30px 30px 30px;
 }
 
-.main{
+.main {
   margin-left: 4.5rem;
   display: flex;
   justify-content: center;
@@ -39,17 +58,18 @@
   font-size: 1.3em;
 }
 
-.login h1{
+.login h1 {
   animation: bounce 1s;
-  font-family:POE;
+  font-family: POE;
 }
 
-.login p{
-  font-family:HLS;
+.login p {
+  font-family: HLS;
   margin: 1rem;
   font-size: 0.9rem;
-  a{
-    font-family:HLS;
+
+  a {
+    font-family: HLS;
     font-size: 0.9rem;
   }
 }
@@ -67,7 +87,7 @@
   border-radius: 100px;
   background: #3c3c3c;
   color: #e5e5cb;
-  font-family:HLS;
+  font-family: HLS;
 }
 
 .login input:focus {
@@ -85,7 +105,7 @@
   border-radius: 500px;
   animation: bounce2 1.6s;
   font-size: 1.5rem;
-  font-family:POE;
+  font-family: POE;
 }
 
 .h1 {
@@ -96,15 +116,16 @@
   margin-bottom: -0px;
   font-size: 2.7rem;
 }
+
 .btn {
   font-family: POE;
   font-size: 1.5rem;
   width: 100%;
-  background: linear-gradient(144deg, #1a120b , 20%,#311913d0 50%,#1a120b );
+  background: linear-gradient(144deg, #1a120b, 20%, #311913d0 50%, #1a120b);
   margin-top: 2rem;
   color: rgb(255, 255, 255);
   padding: 16px !important;
-  border-radius:  30px;
+  border-radius: 30px;
   border: none;
   cursor: pointer;
   /* transition: all 0.4s ease; */
@@ -121,7 +142,7 @@
   background-color: #211f1d;
 }
 
-.login p{
+.login p {
   animation: bounce2 1.3s;
 }
 
