dropdown icon  added

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -57,6 +57,7 @@ body {
   .account-dropdown {
     position: relative;
     margin-right: 100px;
+    padding-right: 30px;
   }
   
   .dropdown-content {
@@ -84,24 +85,35 @@ body {
   .right a,
   .login-button,
   .dropdown-content a,
-  .dropdown-content span,
+  .dropdown-content span{
+    display: inline-block;
+    padding: 10px;
+    position: relative;
+  }
   .account-dropdown {
     display: inline-block;
     padding: 10px;
     position: relative;
+    padding-right: 32px;
   }
   
   .nav-links h1:hover,
   .right a:hover,
   .login-button:hover,
   .dropdown-content a:hover,
-  .dropdown-content span:hover,
-  .account-dropdown:hover {
+  .dropdown-content span:hover {
     border: 2px solid var(--font-color);
     padding: 8px;
     border-radius: 5px;
   }
   
+  .account-dropdown:hover {
+    border: 2px solid var(--font-color);
+    padding: 8px;
+    border-radius: 5px;
+    padding-right: 30px;
+  }
+
   .profile-pic {
     width: 30px; /* Ayarlamak istediğiniz boyuta göre değiştirin */
     height: 30px; /* Ayarlamak istediğiniz boyuta göre değiştirin */
@@ -135,3 +147,23 @@ body {
   display: flex;
   align-items: center;
 }
+
+.account-dropdown:hover .dropdown-content {
+  display: flex; /* Dropdown açıkken görünür yapın */
+}
+
+.account-dropdown::after {
+  content: '';
+  position: absolute;
+  top: 10px; /* Yukarıdan biraz yukarıda başlasın */
+  right: 10px;
+  border-width: 12px;
+  border-style: solid;
+  border-color: transparent transparent var(--font-color) transparent;
+  transition: transform 0.3s ease-out; /* Animasyon eklendi */
+}
+
+.account-dropdown:hover::after {
+  transform: rotate(180deg); /* Hover durumunda üçgeni aşağıya bakan hale getirin */
+}
+
