--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,10 +3,10 @@
   background-color: #f44336;
   color: white;
   position: fixed;
-  top: 75px;
+  top: 80px;
+  right: 20px;
   width: 300px;
-  margin-left: 42.1875%;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 15px;
 }
 
 .closebtn {
