--- a/src/components/InventoryCard/InventoryCard.css
+++ b/src/components/InventoryCard/InventoryCard.css
@@ -54,8 +54,24 @@
 
 .inventory-back-face {
     transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .inventory-card:hover .inventory-card-faces{
     transform: rotateY(180deg);
+}
+
+.download-link {
+    text-decoration: none;
+    padding: 1rem;
+    background-color: #1a120b;
+    border-radius: 1rem;
+    opacity: 0.5;
+    transition: opacity 0.4s;
+}
+
+.download-link:hover {
+    opacity: 1;
 }
