--- a/src/pages/UserUpdate/UserUpdate.css
+++ b/src/pages/UserUpdate/UserUpdate.css
@@ -236,7 +236,7 @@ input[type="file"] {
 }
 
 .card-image {
-  background-color: rgb(236, 236, 236);
+  background-color: #161311;
   width: 100%;
   height: 13rem;
   border-radius: 6px;
