--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -30,9 +30,9 @@
     display: flex;
     flex-direction: row;
 }
-.socialmedia img{
-    width: 2rem;
-    margin: 1rem 1rem;
+.footer_icon{
+    font-size: 1.5rem;
+    margin: 1rem 0.5rem;
 }
 .sb_footer-links-div h2{
     font-size: 14px;
