--- a/src/pages/Dotnet/Dotnet.css
+++ b/src/pages/Dotnet/Dotnet.css
@@ -3,6 +3,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 4rem;
+    font-size: 3rem;
     padding: 2rem;
+}
+.dotnet_image-container{
+    display: flex;
+}
+.dotnet_image{
+    width: 32rem;  
+    top: 0;
+    margin-top: -4rem; 
+    margin-right: -2rem;
 }
